display today's date

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <div class="day-container">
         <h2>Aujourd'hui</h2>
-        <h3 id="date-yesterday"></h3>
+        <h3 id="date-today"></h3>
         <div class="tasks-container">
           <ul class="list-group">
             <a href="#" class="list-group-item list-group-item-action">Tâche</a>
